<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".adapter.ui.detail.DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/detail_page"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img_avatar"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:civ_border_color="#FF000000"
                app:civ_border_width="2dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.060000002"
                tools:src="@tools:sample/avatars" />

            <TextView
                android:id="@+id/tv_name"
                style="@style/TextContent.Bold"
                android:layout_width="0dp"
                android:ellipsize="end"
                android:singleLine="true"
                android:textAlignment="center"
                android:layout_marginEnd="8dp"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/img_avatar"
                tools:text="Name" />

            <TextView
                android:id="@+id/tv_username"
                android:ellipsize="end"
                android:singleLine="true"
                android:textAlignment="center"
                style="@style/TextContent.Sub"
                android:layout_marginEnd="8dp"
                android:layout_width="0dp"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_name"
                tools:text="Username" />

            <TextView
                android:id="@+id/details"
                style="@style/TextDet"
                android:text="@string/details"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline3" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="195dp" />

            <TextView
                android:id="@+id/followers"
                style="@style/TextDet.Field"
                android:text="@string/followers"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/details" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="121dp" />

            <TextView
                android:id="@+id/following"
                style="@style/TextDet.Field"
                android:text="@string/following"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/followers" />

            <TextView
                android:id="@+id/repository"
                style="@style/TextDet.Field"
                android:text="@string/repository"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/following" />

            <TextView
                android:id="@+id/company"
                style="@style/TextDet.Field"
                android:text="@string/company"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/repository" />

            <TextView
                android:id="@+id/location"
                style="@style/TextDet.Field"
                android:text="@string/location"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/company" />

            <TextView
                android:id="@+id/tv_followers"
                style="@style/TextDet.Value"
                android:ellipsize="end"
                android:singleLine="true"
                android:layout_width="0dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/guideline7"
                app:layout_constraintTop_toBottomOf="@+id/details"
                tools:text="3000" />

            <TextView
                android:id="@+id/tv_following"
                style="@style/TextDet.Value"
                android:layout_width="0dp"
                android:ellipsize="end"
                android:singleLine="true"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/guideline7"
                app:layout_constraintTop_toBottomOf="@+id/tv_followers"
                tools:text="1" />

            <TextView
                android:id="@+id/tv_repository"
                style="@style/TextDet.Value"
                android:layout_width="0dp"
                android:ellipsize="end"
                android:singleLine="true"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/guideline7"
                app:layout_constraintTop_toBottomOf="@+id/tv_following"
                tools:text="100" />

            <TextView
                android:id="@+id/tv_company"
                style="@style/TextDet.Value"
                android:layout_width="0dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/guideline7"
                app:layout_constraintTop_toBottomOf="@+id/tv_repository"
                android:ellipsize="end"
                android:singleLine="true"
                tools:text="Nal Dev" />

            <TextView
                android:id="@+id/tv_location"
                style="@style/TextDet.Value"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/guideline7"
                app:layout_constraintTop_toBottomOf="@+id/tv_company"
                android:layout_width="0dp"
                android:ellipsize="end"
                android:singleLine="true"
                tools:text="bandung" />

            <androidx.appcompat.widget.AppCompatToggleButton
                android:id="@+id/toggle_favorite"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/favorite_toggle"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:textOff=""
                android:textOn=""
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detail_page" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tabs" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.32" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>